Fixed lecture explorer height and scrollbar, page height Adresses #46: Lecture explorer scrollbar is now visible. Explorer no longer grows when lectures are opened. Page height is fixed so the scrollbar only appears when needed

--- a/styles/sass/layout/_base_layout.scss
+++ b/styles/sass/layout/_base_layout.scss
@@ -24,9 +24,7 @@
 
 html, body {
     width: 100%;
-    height: 100%;
     min-width: $page-min-width;
-    min-height: $page-min-height;
 }
 
 body {
@@ -50,7 +48,6 @@ body {
 
 #main {
     position: relative;
-    min-height: $lecture-schedule-min-height;
     padding: $main-padding;
 	display: flex;
 	flex-wrap: wrap;
